[tool.poetry]
name = "robotframework-airtest"
version = "0.1.0"
description = "网易Airtest/pocoui的Robotframework测试库"
authors = ["kaluluosi <kaluluosi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "robotframework_airtest" }]


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.0"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[tool.black]
line-length = 88

[tool.ruff]
ignore = ['E501']

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^6.1.1"
click = "^8.1.7"
pocoui = "^1.0.89"
unityparser = "^3.0.1"
pydantic-settings = "^2.0.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
